--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "convex": "^1.31.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
